--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
         </div>
         <div class="skills-box">
           <p class="skills-title">Tools</p>
-          <i class="devicon-linux-plain colored"></i>
+          <i class="devicon-linux-plain"></i>
           <i class="devicon-git-plain colored"></i>
           <i class="devicon-gitlab-plain colored"></i>
-          <i class="devicon-github-plain colored"></i>
+          <i class="devicon-github-original"></i>
         </div>
       </div>
     </section>
